request-timeout.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-istio-rating
spec:
  hosts:
  - sample-istio-rating
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 2s
    route:
    - destination:
        host: sample-istio-rating
        subset: latest
