sample-istio-rating.yml
# Service #
apiVersion: v1
kind: Service
metadata:
  name: sample-istio-rating
  labels:
    app: sample-istio-rating
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: sample-istio-rating
---
# DestinationRule #
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sample-istio-rating
spec:
  host: sample-istio-rating
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: latest
    labels:
      version: latest
---
# VirtualService #
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-istio-rating
spec:
  hosts:
  - sample-istio-rating
  http:
  - route:
    - destination:
        host: sample-istio-rating
        subset: latest
